Found new source of do not annotate and updated datasets
I still need to add information to the READMEs

--- a/scripts/ParseOBOtoTXT.ipynb
+++ b/scripts/ParseOBOtoTXT.ipynb
@@ -53,7 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Call the function with your file names\n",
+    "input_filename = 'gocheck_do_not_annotate.obo'\n",
+    "output_filename = 'gocheck_do_not_annotate_temp.txt'\n",
+    "parse_obo(input_filename, output_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,6 +124,20 @@
     "# Example usage:\n",
     "input_file_path = 'go_temp.txt'  # Replace with the path to your input file.\n",
     "output_file_path = 'go.txt'  # Replace with the path where you want to save the output.\n",
+    "remove_quotation_marks(input_file_path, output_file_path)\n",
+    "os.remove(input_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "# Example usage:\n",
+    "input_file_path = 'gocheck_do_not_annotate_temp.txt'  # Replace with the path to your input file.\n",
+    "output_file_path = 'gocheck_do_not_annotate.txt'  # Replace with the path where you want to save the output.\n",
     "remove_quotation_marks(input_file_path, output_file_path)\n",
     "os.remove(input_file_path)"
    ]
