--- a/data/GeneOntology/ParseOBOtoTXT.ipynb
+++ b/data/GeneOntology/ParseOBOtoTXT.ipynb
@@ -58,6 +58,18 @@
    "outputs": [],
    "source": [
     "# Call the function with your file names\n",
+    "input_filename = 'gocheck_do_not_annotate.obo'\n",
+    "output_filename = 'gocheck_do_not_annotate_temp.txt'\n",
+    "parse_obo(input_filename, output_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Call the function with your file names\n",
     "input_filename = 'go.obo'\n",
     "output_filename = 'go_temp.txt'\n",
     "parse_obo(input_filename, output_filename)"
@@ -112,6 +124,28 @@
     "# Example usage:\n",
     "input_file_path = 'go_temp.txt'  # Replace with the path to your input file.\n",
     "output_file_path = 'go.txt'  # Replace with the path where you want to save the output.\n",
+    "remove_quotation_marks(input_file_path, output_file_path)\n",
+    "os.remove(input_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quotation marks removed from gocheck_do_not_annotate_temp.txt and saved to gocheck_do_not_annotate.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "# Example usage:\n",
+    "input_file_path = 'gocheck_do_not_annotate_temp.txt'  # Replace with the path to your input file.\n",
+    "output_file_path = 'gocheck_do_not_annotate.txt'  # Replace with the path where you want to save the output.\n",
     "remove_quotation_marks(input_file_path, output_file_path)\n",
     "os.remove(input_file_path)"
    ]
