--- a/scripts/TestNeo4j.ipynb
+++ b/scripts/TestNeo4j.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Query: MATCH (p:protein {name: 'wls', txid: 'txid7227'})-[:ProGo]-(g:go_term {id: 'GO:0030177'}) WITH p, g MATCH (p)-[:ProGo]-(g)-[:GoGo*]->(g2) RETURN count(g2), Expected: 63, Actual: 63, Test Passed: True\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "INFO:root:Query: MATCH (p:protein {name: 'wls', txid: 'txid7227'})-[:ProGo]-(g:go_term {id: 'GO:0030177'}) WITH p, g MATCH (p)-[:ProGo]-(g)-[:GoGo*]->(g2) RETURN count(g2), Expected: 63, Actual: 63, Test Passed: True\n",
       "INFO:root:Query: MATCH (p:protein {name: 'shf', txid: 'txid7227'})-[r:ProGo]-(g:go_term {id: 'GO:0016055'}) RETURN count(r), Expected: 0, Actual: 0, Test Passed: True\n",
       "INFO:root:Query: MATCH (g:go_term {id: 'GO:0009987'}) RETURN g.never_annotate, Expected: true, Actual: true, Test Passed: True\n",
       "INFO:root:Query: MATCH (p:protein {name: 'dsh', txid: 'txid7227'})-[r:ProGo]-(g:go_term {id: 'GO:0016055'}) RETURN r.relationship, Expected: involved_in, Actual: involved_in, Test Passed: True\n"
@@ -41,13 +35,13 @@
     "\n",
     "# Define your Cypher queries\n",
     "cypher_queries = [\n",
-    "    # Test if wls was fully annotated to parents in hierarchy (should have 63 results from this query)\n",
+    "    # Test if wls was fully annotated to parents in hierarchy (should have 63 results from this query [2024-17-04])\n",
     "    (\"MATCH (p:protein {name: 'wls', txid: 'txid7227'})-[:ProGo]-(g:go_term {id: 'GO:0030177'}) WITH p, g MATCH (p)-[:ProGo]-(g)-[:GoGo*]->(g2) RETURN count(g2)\", 63),\n",
-    "    # Test that GO terms that are too specific are not annotated\n",
+    "    # Test that GO terms that are too specific are not annotated (should have 0 results from this query [2024-17-04])\n",
     "    (\"MATCH (p:protein {name: 'shf', txid: 'txid7227'})-[r:ProGo]-(g:go_term {id: 'GO:0016055'}) RETURN count(r)\", 0),\n",
-    "    # Test that GO terms that have never_annotate are marked as never_annotate\n",
+    "    # Test that GO terms that have never_annotate are marked as never_annotate (should return true from this query [2024-17-04])\n",
     "    (\"MATCH (g:go_term {id: 'GO:0009987'}) RETURN g.never_annotate\", \"true\"),\n",
-    "    # Test that we did not overwrite direct annotations when propogating annotations\n",
+    "    # Test that we did not overwrite direct annotations when propogating annotations (should return \"involved_in\" from this query [2024-17-04])\n",
     "    (\"MATCH (p:protein {name: 'dsh', txid: 'txid7227'})-[r:ProGo]-(g:go_term {id: 'GO:0016055'}) RETURN r.relationship\", \"involved_in\")\n",
     "]\n",
     "\n",
@@ -100,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
