--- a/data/GeneOntology/ParseOntologyRelationship.ipynb
+++ b/data/GeneOntology/ParseOntologyRelationship.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +24,11 @@
     "import json\n",
     "\n",
     "# Open the input file for reading\n",
-    "with open('go-basic.obo', 'r') as input_file:\n",
+    "with open('go_2024-07-17.obo', 'r') as input_file:\n",
     "    # Open a file for writing the tab-delimited rows\n",
     "    with open('output_file.tsv', 'w') as output_file:\n",
     "        # Write header\n",
-    "        output_file.write(\"id\\tis_a\\n\")\n",
+    "        output_file.write(\"id\\tid2\\n\")\n",
     "\n",
     "        # Initialize variables to store id and relationships\n",
     "        current_id = \"\"\n",
@@ -56,7 +56,7 @@
     "        # Write the last term's relationships if any\n",
     "        if current_id and is_a:\n",
     "            for i in is_a:\n",
-    "                output_file.write(f\"{current_id}\\t{i}\\n\")\n"
+    "                output_file.write(f\"{current_id}\\t{i}\\n\")"
    ]
   },
   {
@@ -68,27 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                      id         id2  is_a\n",
-      "0             GO:0000001  GO:0048308  is_a\n",
-      "1             GO:0000001  GO:0048311  is_a\n",
-      "2             GO:0000002  GO:0007005  is_a\n",
-      "3             GO:0000003  GO:0008150  is_a\n",
-      "4             GO:0000006  GO:0005385  is_a\n",
-      "...                  ...         ...   ...\n",
-      "68311  term_tracker_item  GO:0120255  is_a\n",
-      "68312  term_tracker_item  GO:1901362  is_a\n",
-      "68313  term_tracker_item  GO:2001316  is_a\n",
-      "68314  term_tracker_item   regulates  is_a\n",
-      "68315  term_tracker_item   regulates  is_a\n",
+      "                      id          id2  is_a\n",
+      "0             GO:0000001   GO:0048308  is_a\n",
+      "1             GO:0000001   GO:0048311  is_a\n",
+      "2             GO:0000002   GO:0007005  is_a\n",
+      "3             GO:0000006   GO:0005385  is_a\n",
+      "4             GO:0000007   GO:0005385  is_a\n",
+      "...                  ...          ...   ...\n",
+      "66170  term_tracker_item   GO:0120255  is_a\n",
+      "66171  term_tracker_item   GO:2001316  is_a\n",
+      "66172  term_tracker_item  ends_during  is_a\n",
+      "66173  term_tracker_item    regulates  is_a\n",
+      "66174  term_tracker_item    regulates  is_a\n",
       "\n",
-      "[68316 rows x 3 columns]\n"
+      "[66175 rows x 3 columns]\n"
      ]
     }
    ],
@@ -96,14 +96,14 @@
     "import pandas as pd\n",
     "\n",
     "# Step 2: Read the tab-delimited file into a DataFrame\n",
-    "file_path = 'go_is_a.tsv'\n",
+    "file_path = 'output_file.tsv'\n",
     "df = pd.read_csv(file_path, sep='\\t')\n",
     "\n",
     "# Step 3: Add a new column to the DataFrame\n",
     "df['is_a'] = 'is_a'\n",
     "\n",
     "# Step 4: Save the modified DataFrame to a new file\n",
-    "output_file_path = 'is_a_import.tsv'\n",
+    "output_file_path = 'is_a_import_2024-07-17.tsv'\n",
     "df.to_csv(output_file_path, sep='\\t', index=False)\n",
     "\n",
     "# Display the DataFrame\n",
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "# Open the input file for reading\n",
-    "with open('go-basic.obo', 'r') as input_file:\n",
+    "with open('go_2024-07-17.obo', 'r') as input_file:\n",
     "    # Open a file for writing the tab-delimited rows\n",
     "    with open('output_file.tsv', 'w') as output_file:\n",
     "        # Write header\n",
@@ -209,7 +209,7 @@
     "\n",
     "df['relationship'] = df['relationship'].str.split(' ').str[0]\n",
     "\n",
-    "output_file_path = 'relationship_import.tsv'\n",
+    "output_file_path = 'relationship_import_2024-07-17.tsv'\n",
     "df.to_csv(output_file_path, sep='\\t', index=False)\n",
     "\n",
     "# Display the DataFrame\n",
