--- a/data/GeneOntology/ParseOntologyRelationship.ipynb
+++ b/data/GeneOntology/ParseOntologyRelationship.ipynb
@@ -26,7 +26,7 @@
     "# Open the input file for reading\n",
     "with open('go_2024-07-17.obo', 'r') as input_file:\n",
     "    # Open a file for writing the tab-delimited rows\n",
-    "    with open('output_file.tsv', 'w') as output_file:\n",
+    "    with open('is_a_temp.tsv', 'w') as output_file:\n",
     "        # Write header\n",
     "        output_file.write(\"id\\tid2\\n\")\n",
     "\n",
@@ -94,9 +94,10 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "\n",
     "# Step 2: Read the tab-delimited file into a DataFrame\n",
-    "file_path = 'output_file.tsv'\n",
+    "file_path = 'is_a_temp.tsv'\n",
     "df = pd.read_csv(file_path, sep='\\t')\n",
     "\n",
     "# Step 3: Add a new column to the DataFrame\n",
@@ -105,6 +106,7 @@
     "# Step 4: Save the modified DataFrame to a new file\n",
     "output_file_path = 'is_a_import_2024-07-17.tsv'\n",
     "df.to_csv(output_file_path, sep='\\t', index=False)\n",
+    "os.remove(file_path)\n",
     "\n",
     "# Display the DataFrame\n",
     "print(df)"
@@ -126,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Open the input file for reading\n",
     "with open('go_2024-07-17.obo', 'r') as input_file:\n",
     "    # Open a file for writing the tab-delimited rows\n",
-    "    with open('output_file.tsv', 'w') as output_file:\n",
+    "    with open('go-relationship_temp.tsv', 'w') as output_file:\n",
     "        # Write header\n",
     "        output_file.write(\"id\\trelationship\\n\")\n",
     "\n",
@@ -182,27 +184,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               id          relationship         id2\n",
-      "0      GO:0000015               part_of  GO:0005829\n",
-      "1      GO:0000018             regulates  GO:0006310\n",
-      "2      GO:0000019             regulates  GO:0006312\n",
-      "3      GO:0000022               part_of  GO:0000070\n",
-      "4      GO:0000022               part_of  GO:0007052\n",
-      "...           ...                   ...         ...\n",
-      "15262  GO:2001284             regulates  GO:0038055\n",
-      "15263  GO:2001285  negatively_regulates  GO:0038055\n",
-      "15264  GO:2001286             regulates  GO:0072584\n",
-      "15265  GO:2001287  negatively_regulates  GO:0072584\n",
-      "15266  GO:2001288  positively_regulates  GO:0072584\n",
+      "               id relationship         id2\n",
+      "0      GO:0000015      part_of  GO:0005829\n",
+      "1      GO:0000018    regulates  GO:0006310\n",
+      "2      GO:0000019    regulates  GO:0006312\n",
+      "3      GO:0000022      part_of  GO:0000070\n",
+      "4      GO:0000022      part_of  GO:0007052\n",
+      "...           ...          ...         ...\n",
+      "17590  GO:2001310     has_part  GO:0003839\n",
+      "17591  GO:2001310     has_part  GO:0004364\n",
+      "17592  GO:2001310     has_part  GO:0004497\n",
+      "17593  GO:2001310     has_part  GO:0008170\n",
+      "17594  GO:2001310     has_part  GO:0008483\n",
       "\n",
-      "[15267 rows x 3 columns]\n"
+      "[17595 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "\n",
-    "file_path = 'go-relationship.tsv'\n",
+    "file_path = 'go-relationship_temp.tsv'\n",
     "df = pd.read_csv(file_path, sep='\\t')\n",
     "\n",
     "df['id2'] = df['relationship'].str.split(' ').str[1]\n",
@@ -211,6 +214,7 @@
     "\n",
     "output_file_path = 'relationship_import_2024-07-17.tsv'\n",
     "df.to_csv(output_file_path, sep='\\t', index=False)\n",
+    "os.remove('go-relationship_temp.tsv')\n",
     "\n",
     "# Display the DataFrame\n",
     "print(df)"
